# XRRuntime

./: .gitattributes  .gitignore  AndroidManifest.xml  CMakeLists.txt  DOCUMENTATION.md  QUICK_FIX_JAVA.md  README.md  README_SETUP.md  SETUP.md  build.gradle  build.gradle.java8  gradle-wrapper.properties.java8  gradle.properties  local.properties.example  proguard-rules.pro  settings.gradle  项目说明.md
SnapdragonTool/: gtk-sharp-2.12.45.msi
SnapdragonXR-SDK-source.rel.4.0.5/: .gitkeep
SnapdragonXR-SDK-source.rel.4.0.5/controllers/FinchControllerService/: build.gradle
SnapdragonXR-SDK-source.rel.4.0.5/doc/html/: SVR.html  annotated.html  classes.html  dir_0147871c7885df2e7fdb218a833706d0.html  dir_9399e0b39b0aa3db24c951c3df6b2e38.html  dir_f65fbc95bc36bc97a9d2a1e0aa5fc25f.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  namespaces.html  namespacesxr_controller_axis1_d.html  namespacesxr_controller_axis2_d.html  namespacesxr_controller_button.html  namespacesxr_controller_touch.html  pages.html  structsxr_begin_params-members.html  structsxr_begin_params.html  structsxr_cloud_point-members.html  structsxr_cloud_point.html  structsxr_controller_caps-members.html  structsxr_controller_caps.html  structsxr_controller_state-members.html  structsxr_controller_state.html  structsxr_device_info-members.html  structsxr_device_info.html  structsxr_event-members.html  structsxr_event.html  structsxr_event_data___proximity-members.html  structsxr_event_data___proximity.html  structsxr_event_data___state-members.html  structsxr_event_data___state.html  structsxr_event_data___thermal-members.html  structsxr_event_data___thermal.html  structsxr_eye_pose_state-members.html  structsxr_eye_pose_state.html  (+34 more)
SnapdragonXR-SDK-source.rel.4.0.5/framework/: svrAndroidMain.cpp  svrApplication.cpp  svrApplication.h  svrGeometry.cpp  svrGeometry.h  svrInput.cpp  svrInput.h  svrRenderExt.cpp  svrRenderExt.h  svrRenderTarget.cpp  svrRenderTarget.h  svrShader.cpp  svrShader.h  svrUtil.cpp  svrUtil.h
SnapdragonXR-SDK-source.rel.4.0.5/samples/360photoViewer/: AndroidManifest.xml  build.gradle  install_ll.bat  install_lr.bat
SnapdragonXR-SDK-source.rel.4.0.5/samples/AdvancedLayerVR/: install_ll.bat  install_lr.bat
SnapdragonXR-SDK-source.rel.4.0.5/samples/CameraLayerVR/: install_ll.bat  install_lr.bat
SnapdragonXR-SDK-source.rel.4.0.5/samples/CameraVR/: install_ll.bat  install_lr.bat
SnapdragonXR-SDK-source.rel.4.0.5/samples/ControllerVR/: install_ll.bat  install_lr.bat
SnapdragonXR-SDK-source.rel.4.0.5/samples/FoveatedVR/: install_ll.bat  install_lr.bat
SnapdragonXR-SDK-source.rel.4.0.5/samples/MultiDisplayVR/: install_ll.bat  install_lr.bat  install_p.bat
SnapdragonXR-SDK-source.rel.4.0.5/samples/MultiViewVR/: install_ll.bat  install_lr.bat
SnapdragonXR-SDK-source.rel.4.0.5/samples/OcclusionMeshVR/: install_ll.bat  install_lr.bat
SnapdragonXR-SDK-source.rel.4.0.5/samples/ProtectedAdvancedLayerVR/: install_ll.bat  install_lr.bat
SnapdragonXR-SDK-source.rel.4.0.5/samples/SimpleLayerVR/: install_ll.bat  install_lr.bat
SnapdragonXR-SDK-source.rel.4.0.5/samples/SimpleVR/: install_ll.bat  install_lr.bat
SnapdragonXR-SDK-source.rel.4.0.5/samples/SpaceWarpVR/: install_ll.bat  install_lr.bat  install_p.bat
SnapdragonXR-SDK-source.rel.4.0.5/samples/SurfaceMeshVR/: install_ll.bat  install_lr.bat
SnapdragonXR-SDK-source.rel.4.0.5/samples/common/: App.mk  Framework.mk  SvrApi.mk
SnapdragonXR-SDK-source.rel.4.0.5/samples/vulkanTest/: AndroidManifest.xml  build.gradle  install_ll.bat  install_lr.bat  install_port.bat
SnapdragonXR-SDK-source.rel.4.0.5/sxrApi/jni/: Android.mk  Application.mk
SnapdragonXR-SDK-source.rel.4.0.5/sxrApi/private/: com_qualcomm_sxapi_SxrApi.cpp  svrApiCamera.cpp  svrApiCore.cpp  svrApiCore.h  svrApiEvent.cpp  svrApiEvent.h  svrApiHelper.h  svrApiHiddenMesh.cpp  svrApiPredictiveSensor.cpp  svrApiPredictiveSensor.h  svrApiSpaceWarp.cpp  svrApiTimeWarp.cpp  svrApiTimeWarp.h  svrApiTimeWarpShaders.cpp  svrController.cpp  sxrApi3dr.cpp  sxrApiAnchors.cpp  sxrApiVersion.cpp  sxrDistortionMesh.cpp  sxrDistortionMesh.h
SnapdragonXR-SDK-source.rel.4.0.5/sxrApi/public/: sxrApi.h  sxrApi3dr.h  sxrApiAnchors.h
SnapdragonXR-SDK-source.rel.4.0.5/sxrService/app/: build.gradle
app/: build.gradle
book/: README.md  Word文档图表和截图完整指南.md  XRRuntime框架设计与开发实践指南.docx  ~$Runtime框架设计与开发实践指南.docx  图表和截图处理说明.md  图表添加总结.md  图表清单.md  整理清单.md  文档说明.md
book/appendices/: appendix_a.md  appendix_b.md  appendix_c.md  appendix_d.md  appendix_e.md  appendix_f.md
book/chapters/part1/: chapter01.md  (+1 more)
book/images/: README.md  截图添加指南.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD.md  COMPILATION_ISSUES_CHECK.md  COMPILE_WORKAROUND.md  CURSOR_COMPILE_GUIDE.md  DEBUG.md  DEPLOY.md  FINAL_ISSUES_SUMMARY.md  IDE_VERSION_FIX.md  JAVA_VERSION_FIX.md  JAVA_VERSION_ISSUE.md  KNOWN_LIMITATIONS.md  OPENXR_SDK_SETUP.md  OPENXR_SDK_SETUP_COMPLETE.md  PROJECT_AUDIT_REPORT.md  PROJECT_CHECK_SUMMARY.md  PROJECT_GUIDE.md  QVR_INTEGRATION.md  README.md  SDK_INTEGRATION_EXAMPLE.md  SYSTEM_INTEGRATION.md  USAGE_GUIDE.md
gradle/wrapper/: gradle-wrapper.properties
scripts/: README.md  README_图表处理.md  build.bat  build.sh  convert_all_mermaid.py  debug.bat  debug.sh  deploy.bat  deploy.sh  deploy_to_system.ps1  deploy_to_system.sh  md_to_docx.py  mermaid_to_image.py
src/main/cpp/: CMakeLists.txt  main.cpp
src/main/cpp/jni/: jni_bridge.cpp  jni_bridge.h
src/main/cpp/openxr/: event.cpp  frame.cpp  input.cpp  instance.cpp  openxr_api.cpp  openxr_api.h  session.cpp  space.cpp  swapchain.cpp
src/main/cpp/platform/: android_platform.cpp  android_platform.h  display_manager.cpp  display_manager.h  frame_sync.cpp  frame_sync.h  input_manager.cpp  input_manager.h
src/main/cpp/qualcomm/: qvr_api_wrapper.cpp  qvr_api_wrapper.h  spaces_sdk_wrapper.cpp  spaces_sdk_wrapper.h  xr2_platform.cpp  xr2_platform.h
src/main/cpp/utils/: error_handler.cpp  error_handler.h  logger.cpp  logger.h  memory_manager.cpp  memory_manager.h
(+272 files in other folders)
